{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 96,
  "lineage": "45017039-ebf4-e6c1-1aa6-a26cff62c027",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bf6c9da16dcea20c",
            "domain": "vpc",
            "id": "eipalloc-004b8525c5b85d555",
            "instance": "i-0bccc1b74312d2dd0",
            "network_interface": "eni-0fd28948682938e11",
            "private_dns": "ip-10-0-37-74.ec2.internal",
            "private_ip": "10.0.37.74",
            "public_dns": "ec2-54-146-21-92.compute-1.amazonaws.com",
            "public_ip": "54.146.21.92",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-example",
            "aws_key_pair.key-example",
            "aws_security_group.security-group-example-allow-ssh",
            "aws_subnet.subnet-example",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bcc094591f354be2",
            "arn": "arn:aws:ec2:us-east-1:539698812986:instance/i-0bccc1b74312d2dd0",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bccc1b74312d2dd0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd28948682938e11",
            "private_dns": "ip-10-0-37-74.ec2.internal",
            "private_ip": "10.0.37.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0991df0712cf5dff9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0053ab7890861545a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4f09867241dc602",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0053ab7890861545a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-example",
            "aws_security_group.security-group-example-allow-ssh",
            "aws_subnet.subnet-example",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539698812986:internet-gateway/igw-0d2d98bd940ea2627",
            "id": "igw-0d2d98bd940ea2627",
            "owner_id": "539698812986",
            "vpc_id": "vpc-0b53d4a5c31153804"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-083e11089493e13f4",
            "owner_id": "539698812986",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d2d98bd940ea2627",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0b53d4a5c31153804"
          },
          "dependencies": [
            "aws_internet_gateway.example-gw",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c07ed2da7b406f2",
            "route_table_id": "rtb-083e11089493e13f4",
            "subnet_id": "subnet-0d4f09867241dc602"
          },
          "dependencies": [
            "aws_internet_gateway.example-gw",
            "aws_route_table.route-table-example",
            "aws_subnet.subnet-example",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-group-example-allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539698812986:security-group/sg-0053ab7890861545a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0053ab7890861545a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "539698812986",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0b53d4a5c31153804"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539698812986:subnet/subnet-0d4f09867241dc602",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/19",
            "id": "subnet-0d4f09867241dc602",
            "map_public_ip_on_launch": false,
            "owner_id": "539698812986",
            "vpc_id": "vpc-0b53d4a5c31153804"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:539698812986:vpc/vpc-0b53d4a5c31153804",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e43b0b79ee41a247",
            "default_route_table_id": "rtb-04f89d82023464292",
            "default_security_group_id": "sg-05197e00c2ec380e5",
            "dhcp_options_id": "dopt-26148a5c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b53d4a5c31153804",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04f89d82023464292",
            "owner_id": "539698812986"
          }
        }
      ]
    }
  ]
}